--- a/clases/sprint3/41.express/1.programo/2.ejemplo/package.json
+++ b/clases/sprint3/41.express/1.programo/2.ejemplo/package.json
@@ -2,14 +2,13 @@
   "name": "dwfs41",
   "version": "1.0.0",
   "description": "Acamica uso de express",
-  "main": "index.js",
+  "main": "serve.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
