--- a/clases/sprint3/41.express/1.programo/2.ejemplo/package.json
+++ b/clases/sprint3/41.express/1.programo/2.ejemplo/package.json
@@ -4,7 +4,8 @@
   "description": "Acamica uso de express",
   "main": "serve.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
