--- a/clases/sprint3/44.seguridad/1.programo/package.json
+++ b/clases/sprint3/44.seguridad/1.programo/package.json
@@ -2,7 +2,7 @@
   "name": "seguridad",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +13,7 @@
     "express": "^4.17.1",
     "express-limiter": "^1.6.1",
     "express-rate-limit": "^5.1.3",
-    "helmet": "^3.23.2",
+    "helmet": "^3.23.3",
     "redis": "^3.0.2"
   }
 }
